// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders associatedClassesSelection view correctly 1`] = `
<div>
  <SearchAssociatedClassesSelectionContainer />
</div>
`;

exports[`Search renders correctly 1`] = `
<div>
  <React.Fragment>
    <ForwardRef(WithStyles) />
    <ForwardRef(WithStyles) />
  </React.Fragment>
</div>
`;

exports[`Search renders sectionSelection view correctly 1`] = `
<div>
  <SearchSectionSelectionContainer />
</div>
`;
